Fixing image display and overflow bug at occupation

--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@
     justify-content: center;
     margin: auto;
     padding: 10px;
+	overflow: hidden;
 }
 
 .occupation p {
@@ -74,7 +75,7 @@
 }
 
 .card-img {
-    width: 300px;
+    width: 25rem;
 }
 
 .card-info{
